# llm-neuro-surgeon

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DECISIONS.md  DESIGN_PACK.md  MASTER_PROMPT.md  PLAN.md  PROGRESS.md  PROJECT.md  QUESTIONS.md  RALPH.md  RALPH_PROMPT.md  README.md  TEST_INFRA.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ralph.sh
.claude/: settings.json
.claude/agents/: adapter-smith.md  doc-writer.md  recon.md  red-team.md  test-writer.md  ui-builder.md
.github/workflows/: build.yml  ci.yml
.qwen/: orchestrator-context.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  config.rs  dry_run.rs  error.rs  lib.rs  logger.rs  main.rs  state.rs
apps/desktop/src/components/: ui.tsx
apps/desktop/src/screens/: AdapterInspector.tsx  ConfigurationManager.tsx  DebugConsole.tsx  MainDashboard.tsx  Marketplace.tsx  McpHub.tsx  OnboardingWizard.tsx  StatusMonitor.tsx  types.ts
apps/desktop/src/screens/__tests__/: OnboardingWizard.e2e.test.tsx
brands/cerebra/: index.html
brands/cortex/: index.html
brands/synapse/: index.html
docs/: ADAPTER_AUTHORING_GUIDE.md  CODE_REVIEW.md  REPRODUCIBLE_BUILDS.md  USER_GUIDE.md  security.md
docs/packaging/: RELEASE_PACKAGING.md
docs/research/: aider.md  claude-code.md  cline.md  continue.md  cursor.md  gemini-cli.md  github-copilot.md  openai-codex.md  opencode.md  roo-code.md  windsurf.md  zed.md
fixtures/: README.md
fixtures/cursor/: .cursorrules
fixtures/cursor/.cursor/rules/: repo-conventions.mdc
fixtures/updater/: latest.json
