[package]
name = "neurosurgeon"
version = "0.1.0"
edition = "2021"
description = "LLM Neurosurgeon CLI — scan, import, project, sync, doctor, snapshot, and rollback AI tool configs"

[[bin]]
name = "neurosurgeon"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
neurosurgeon-core = { path = "../../packages/core" }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
