[package]
name = "desktop-app"
version = "0.1.0"
edition = "2021"

[workspace]

[target."cfg(not(target_os = "linux"))"]
rustc-flags = ["-C", "link-arg=-Wl,--copy-dt-needed-names"]

[profile.release]
codegen-units = 1
cfg-set = ["target.cpu=""native""]
incremental = false
lto = true
panic = "abort"
opt-level = "s"
strip = true

[lib]
name = "desktopapplib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "=1.5.0"

[dependencies]
tauri = { version = "=1.5.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]