[package]
name = "desktop-app"
version = "0.1.0"
edition = "2021"
description = "LLM Neurosurgeon desktop application (Tauri core)"


[[bin]]
name = "desktop-app"
path = "src/main.rs"

[lib]
name = "desktopapplib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=1.5.0", features = [] }

[dependencies]
tauri = { version = "=1.5.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
directories = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
incremental = false
lto = true
panic = "abort"
opt-level = "s"
strip = true
